--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,3 +1,10 @@
 <html>
-    <title>To-Do Lists</title>
+    <head>
+        <title>To-Do lists</title>
+    </head>
+    <body>
+        <h1>Your To-Do list</h1>
+        ​<input id="new_item" placeholder="Enter a to-do item"/>
+        ​<table id="list_table"></table>
+    </body>
 </html>
