--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -17,6 +17,11 @@
                         <form method="POST" action="{% block form_action %} {% endblock %}">
                         ​    <input name="item_text" id="new_item" class="form-control input_lg" placeholder="Enter a to-do item"/>
                             {% csrf_token %}
+                            {% if error %}
+                                <div class="form-group has-error">
+                                    <span class="help-block">{{ error }}</span>
+                                </div>
+                            {% endif %}
                         </form>
                     </div>
                 </div>
