use onload boilerplate and namespacing

--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -36,8 +36,10 @@
         <script src="/static/jquery-3.4.1.min.js"></script>
         <script src="/static/list.js"></script>
         <script>
-            initialize();
+            $(document).ready( () => {
+                window.Superlists.initialize();
+            });
         </script>
-        
+
     </body>
 </html>
