--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -48,21 +48,29 @@
                 <div class="col-md-6 offset-md-3 jumbotron">
                     <div class="text-center">
                         <h1>{% block header_text %} {% endblock %}</h1>
-                        <form method="POST" action="{% block form_action %} {% endblock %}">
-                        ​    {{ form.text }}
-                            {% csrf_token %}
-                            {% if error %}
-                                <div class="form-group has-error">
-                                    <span class="help-block">{{ form.text.errors }}</span>
-                                </div>
-                            {% endif %}
-                        </form>
+                        {% block list_form %}
+                            <form method="POST" action="{% block form_action %} {% endblock %}">
+                        ​       {{ form.text }}
+                                {% csrf_token %}
+                                {% if error %}
+                                    <div class="form-group has-error">
+                                        <span class="help-block">{{ form.text.errors }}</span>
+                                    </div>
+                                {% endif %}
+                            </form>
+                        {% endblock %}
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 offset-md-3">
                     {% block table %}
+                    {% endblock %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 offset-md-3">
+                    {% block extrac_content %}
                     {% endblock %}
                 </div>
             </div>
