--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -70,7 +70,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6 offset-md-3">
-                    {% block extrac_content %}
+                    {% block extra_content %}
                     {% endblock %}
                 </div>
             </div>
