--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -13,7 +13,7 @@
             <nav class="navbar navbar-default" role="navigation">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="/">Superlists</a>
-                    {% if user.email %}
+                    {% if user and user.email %}
                         <ul class="nav navbar-nav navbar-left">
                             <li><a href="{% url 'my_lists' user.email %}">My Lists</a></li>
                         </ul>
