--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -70,6 +70,12 @@
             </div>
             <div class="row">
                 <div class="col-md-6 offset-md-3">
+                    {% block share %}
+                    {% endblock %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 offset-md-3">
                     {% block extra_content %}
                     {% endblock %}
                 </div>
